# Multimedia_Training

Multimedia_Training/Advanced_Training_PDFs/: Vertical_Horizontal_sync.txt
Multimedia_Training/Basic_Training_PDFS/: PIXEL_BUFF_INFO.docx  frames.txt  pack.txt  video_codec.txt
Multimedia_Training/Company_Basic_Training_ref/: Multimedia_training.doc  route.txt
Multimedia_Training/Company_Basic_Training_ref/reference/: .~lock.video_overview.pptx#  Audio-Compression.ppt  Understanding Audio.doc  digitalaudio.pptx  video_overview.pptx
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Cropping_Plugin/: file.txt
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Draw_shapes/: circle_fineline.c  test.c
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/LOGO_LAYER/: circle_fineline.c  logo.c  test.c
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Nearest_neighbours/: test.c
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Set_caps/gst-template/: meson.build
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Set_caps/gst-template/gst-plugin/: meson.build
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Set_caps/gst-template/gst-plugin/src/: gstsetcaps.c  gstsetcaps.h
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Sometimes_pad/gst-template/: meson.build
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Sometimes_pad/gst-template/gst-plugin/: meson.build
Multimedia_Training/Gstreamer_Training/ALL_PLUGINS/Sometimes_pad/gst-template/gst-plugin/src/: gstdynamic.c  gstdynamic.h
Multimedia_Training/Gstreamer_Training/GTK/: box.c  container.c  fixed.c  gtkwidget.c  newpos.c  start.c
Multimedia_Training/Gstreamer_Training/GTK/glade/: fixed  fixed.c  part.glade  (+1 more)
Multimedia_Training/Gstreamer_Training/Gstreamer videos/: youtube_links.txt
Multimedia_Training/Gstreamer_Training/Gstreamer_plugins_projects_my_ref/: buffer_timestamps.txt  check.c  gstcroptech 1.c  gstcroptech.c  gstcroptech_different.c  gstcroptech_memcpy.c  gstcroptech_work.c  planes_colorspace.txt  work.c
Multimedia_Training/Gstreamer_Training/Gstreamer_source/: 11-Tizen_Multimedia_Framework.ppt  vdocuments.mx_gstreamer-part-2.ppt  vdocuments.mx_gstreamer-part-3.ppt  vdocuments.mx_gstreamer-part-5.ppt  vdocuments.mx_gstreamer-plugin-devpt1.ppt
Multimedia_Training/Gstreamer_Training/Mixed_Programs/: audio_play.c  audio_video_qtdemux_decodebin.c  audio_visualize.c  basic_2.c  basic_element.c  basic_initialize.c  bin_creation.c  decode_uri.c  demux.c  demux_new.c  demux_qt.c  demuxer.c  element_features.c  element_find_create.c  gobject_string.c  gstresolution.c  hello.c  leet.c  leet_new.c  lesser.c  main.c  mat.c  mypull.c  mytest.c  new_test2.c  new_test7.c  one.c  own_tee.c  pad.c  pads_link.c  qtdemux.c  query.c  res_change.c  samp_res.c  set.c  square_line.c  stream.c  structure.c  subtitle.c  tee.c  (+14 more)
Multimedia_Training/Gstreamer_Training/PIPELINE_Background_Process/: process.txt
Multimedia_Training/Gstreamer_Training/Plugin_Development_Basics/Sometimes_pads/another_compile/: CMakeLists.txt  test.c
Multimedia_Training/Gstreamer_Training/Plugin_Development_Basics/Sometimes_pads/testing/: CMakeLists.txt  gstteer.c
Multimedia_Training/Gstreamer_Training/Testing_example/: base7.c
Multimedia_Training/Gstreamer_Training/Video_Scale/: scaler.c  vscale.c
Multimedia_Training/Gstreamer_Training/gst_tools/: playbin_usuage.c  qtsdemux.c  sink.c  test.c
Multimedia_Training/Gstreamer_Training/gstreamer-cheat-sheet/: basics.md
Multimedia_Training/Gstreamer_Training/gstreamer_tutorials/: Makefile  audio.c  basic_4.c  check.c  debug.c  dynamic.c  playback.c  sample.c  stream.c  tee.c  tee_elements.c  tee_flow.c  test.c  tester.c
Multimedia_Training/Gstreamer_scripts/Python_scripts/: Normal_gst_script.py  cases.py  corner.py  dur.py  nest.py  new.py  pipeline.py  testcases.py  testing.py
Multimedia_Training/Multimedia_systems_course/: L6_L5_lecture_notes.ppt  course_overview.txt
Multimedia_Training/ZYNQ_DEV_Board/Normal_Display_Port/: command_sheet1  command_sheet2
Multimedia_Training/ZYNQ_DEV_Board/Petalinux/: 2023.1_PetaLinux_Package_List.xlsx
Multimedia_Training/ZYNQ_DEV_Board/Zynq_Board_Camera_access/: mipi_camera.txt  streams.txt  yavta_commands.txt
(+371 files in other folders)
